--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 *{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: azure;
+    padding: 0px;
+    margin: 0px;
 }
 header {
     background-color: #1F1A29;
@@ -15,7 +17,6 @@ header {
     font-weight: 400;
     font-size: 32px;
     line-height: 40px;
-
 }
 
 .nav a {
@@ -25,8 +26,6 @@ header {
 
 .contact  {
     display:inline;
-
-    
 }
 
 .contact h3 {
@@ -45,8 +44,9 @@ header {
     justify-content: space-between;
 }
 
-.socials img {
+.socials a {
     padding: 10px;
+    cursor: pointer;
 }
 
 
@@ -54,4 +54,72 @@ header {
     display: flex;
     align-items: center;
     padding-right: 50px;
+    cursor: pointer;
+}
+
+main {
+    background-image: url("../img/Group 1.png");
+    margin-right: 1000px;
+    position: relative;
+    text-align: center;
+    width: 1520px;
+    height: 583px;
+}
+
+main img {
+    width: 1720px;
+    height: 583px;
+}
+
+.burgers {
+    position: absolute;
+}
+
+.burgers h2 {
+    font-style: italic;
+    font-size: 94px;
+    margin-top: 150px;
+    margin-left: 40px;
+}
+
+.burgers p {
+    font-size: 28px;
+    margin-top: 80px;
+}
+
+.love_it {
+    display: flex;
+    justify-content: end;
+    padding: 28px 14px;
+
+}
+.love_it h2 {
+    color: rgb(221, 221, 24);
+    font-style: italic;
+    font-size: 66px;
+}
+
+.more {
+    margin-left: 900px;
+    margin-top: 140px ;
+}
+
+.more button {
+    background-color: #333333;  
+    border: none;
+    border-radius: 25px;
+    color: rgb(201, 201, 24);
+    font-weight: Bold;
+    padding: 18px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 44px;
+    margin: 4px 2px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+}
+
+.more button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
